--- a/contatos.css
+++ b/contatos.css
@@ -18,104 +18,85 @@
 /* Paleta de cores */
 
 *{
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
+  margin: 0; /*Zerando*/
+  padding: 0;/*zerando*/
+  font-family: Poppins; /*fonte principal da página*/
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
 }
 /* Resetando a página */
 body{
-   background-color: #0D0D0D;
-/* Cor de fundo da página */
+   background-color: #0D0D0D; /* Cor de fundo da página */
 }
 
-html{
+
 /* Definições na raiz do html */
-    width: 100%;
-/* Para ocupar 100% da largura */
-    height: 100vh;
-/*  100vh para que a página tenha a mesma altura do navegador */
-overflow-x: hidden;
+html{
+    width: 100%; /* Para ocupar 100% da largura */
+    height: 100vh; /*  100vh para que a página tenha a mesma altura do navegador */
+    overflow-x: hidden;
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
-    padding: min(2vh, 4rem);
-/*  Tamanho do cabeçalho */
-    background-color: #0D0D0D;
-/* Cor de fundo */
-    display: flex;
-/* Tornando Flex */
-    justify-content: space-between;
-/*  Justificando o conteúdo */
-    align-items: center;
-/* Alinhando itens ao centro */
-    text-align: center;
-/* Alinhando os textos ao centro */
-    position: sticky;
-/* Fixando o cabeçalho ao rolar a página */
-top: 0;
-/* Zerando a parte de cima */
-left: 0;
-/* Zerando a esquerda (Que é por onde o elemento aparece) */
-z-index: 999;
-/*  Dando prioridade */
-width: 100%;
-/* Pra ocupar 100% do espaço */
+    padding: min(2vh, 4rem); /*  Tamanho do cabeçalho */
+    background-color: #0D0D0D; /* Cor de fundo */
+    display: flex; /* Tornando Flex */
+    justify-content: space-between; /*  Justificando o conteúdo */
+    align-items: center; /* Alinhando itens ao centro */
+    text-align: center; /* Alinhando os textos ao centro */
+    position: sticky; /* Fixando o cabeçalho ao rolar a página */
+top: 0; /* Zerando a parte de cima */
+left: 0; /* Zerando a esquerda (Que é por onde o elemento aparece) */
+z-index: 999; /*  Dando prioridade */
+width: 100%; /* Pra ocupar 100% do espaço */
 overflow: hidden; /* */
 box-shadow: 0px 2px 2px rgb(255, 255, 255);
-font-size: 1.3rem;
+font-size: 1.3rem; /*Tamanha das letras do header*/
 }
 
-header img{
+
 /* Estilização da logo */
-    width: 5rem;
-/* Tamanho */
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-/* Alinhando item a centro */
-    justify-content: center;
-    /*  Justificando o conteúdo */
+header img{
+    width: 5rem; /* Tamanho da nossa imagem*/
+    display: flex;   /* Tornando Flex os conteúdos */
+    align-items: center; /* Alinhando item a centro */
+    justify-content: center;  /*  Justificando o conteúdo */
 }
 
 header a{
-    margin-right: 2vh;
-/*  Espaçento na esquerda */
-    color: #F2F2F2;
-/*  Cor do texto */
-    font-weight: 800;
-    /* Peso da fonte */
+    margin-right: 2vh; /*  Espaçento na esquerda */
+    color: #F2F2F2  ;/*  Cor do texto */
+    font-weight: 800;  /* Peso da fonte */
+ 
 
 }
 
 header a:hover{
-    border-bottom: 2.5px solid#643DF2;
-    /* Criando uma borda sólida com cor */
-    transition: 0.1s;
-/* Tempo de transição */
+    border-bottom: 2.5px solid#643DF2;  /* Criando uma borda sólida com cor */
+    transition: 0.1s; /* Tempo de transição */
 }
 
 
 header i {
-    font-size: 1.5rem;
-    /* Tamanho */
-    color: #643DF2;
-    /* Cor do texto */
+    font-size: 1.5rem;   /* Tamanho */
+    color: #643DF2;   /* Cor do texto */
 }
+
+
+/* estamos começando a estilização do mobile menu  */
 .mobile-menu-icon button{
     background-color: var(--grayb);
-    border: none;
-    padding: 7px;
-    color: var(--white);
-    border-radius: 8px;
+    border: none; /*Desabilitamos o border do botões*/
+    padding: 7px; /*Tamanho dos botões*/
+    color: var(--white); /*Color dos botões*/
+    border-radius: 8px; /*Arredondamento dos deles*/
   }
   
   .mobile-menu-icon i {
-    font-size: 16px;
+    font-size: 16px; /*Tamanho do ícone do mobile menu*/
   }
   
   .mobile-menu-icon {
@@ -135,47 +116,49 @@ header i {
 
 
 /*Aqui estamos estilizando nossa segunda(2) sessão */
+/* Cor - tamanho - 100% de preenchimento da sessão */
   .section-1{
-background-color: #643DF2; /*Cor dew fundo*/
+background-color: #643DF2; /*Cor de fundo*/
 padding: 120px; /*Preenchimento da nossa sessão*/
 width: 100%;
   }
-/* Cor - tamanho - 100% de preenchimento da sessão */
 
- .section-1 h1{
-    font-size: 2rem;
-    text-align: center;
-    color: #F2F0EB;
- }
+
 /* Alinhando, tamanho e cor do título */
+ .section-1 h1{
+    font-size: 2rem; /*Tamanho do texto*/
+    text-align: center; /*deixamos o texto ao centro*/
+    color: #F2F0EB; /*Cor do texto*/
+ }
+ 
 
+ /* div pai para posicionar itens */
  .section-1 .div-button{
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 30px;
  }
-/* div pai para posicionar itens */
 
+/* Formatação do botão */
  .div-button button{
-    height: 50px;
-    width: 18rem;
-    border-radius: 1.5rem;
-    font-size: 20px;
-    font-weight: 800;
-    color: white;
-    background-color: black;
-    padding: 10px;
-    display: flex;
+    height: 50px; /*Altura*/
+    width: 18rem; /*Largura*/
+    border-radius: 1.5rem; /*Arredondamento*/
+    font-size: 20px; /*Tamanho do texto*/
+    font-weight: 800; /*Peso da fonte*/
+    color: white; /*Cor do texto*/
+    background-color: black; /*Cor de fundo do botão*/
+    padding: 10px; /*Prenchimento*/
+    display: flex; /*Aqui estamos deixando os botões ao lado a lado */
     align-items: center;
-    justify-content: center;
+    justify-content: center; /*Justificando os conteúdos*/
     align-items: center;
     margin-top: 25px;
     margin-bottom: 10px;
  }
-/* Formatação do botão */
 
-
+ /* Hover para mudar algo ao passar o mouse */
  .div-button button:hover{
     background-color:  #F2F0EB;
     border-color: black;
@@ -183,7 +166,6 @@ width: 100%;
     cursor: pointer;
     transition: 0.9s;
  }
-/* Hover para mudar algo ao passar o mouse */
 
  /* A estilização das parágrafos */
  .section-1 p{
@@ -196,28 +178,28 @@ width: 100%;
 
 
 /* Início da estilização da sessão 3 */
+/* Tamanho e cor pra sessão */
  .section-2{
     padding: 100px;
     background-color: #643DF2;
     text-align: center;
  }
-/* Tamanho e cor pra sessão */
 
 .flex-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
+    display: flex; /*Deixamos os itens ao lado a lado*/
+    justify-content: center; /*  Justificando o conteúdo */
+    align-items: center; /*Estamos centralizando os conteúdos*/
+    gap: 40px; /*Espaçamento entre elas*/
     flex-direction: column;
-    color: white;
+    color: white; /*Cor do fundo da caixa*/
 } 
 /* Uma div pai para posicionar os elementos */
 
 .box-form{
-    display:flex ;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
+    display:flex; /*Deixamos os items ao lado a lado*/
+    justify-content: center; /*  Justificando o conteúdo */
+    align-items: center; /*Alinhamos os itens no centro*/
+    gap: 5rem; /*Espaçamento entre os conteúdos*/
 }
 /* Uma div pai para posicionar os elementos */
 
@@ -227,9 +209,9 @@ width: 100%;
 .container { /* Aqui estamos chamando nossa Class */
     max-width: 1280px; /* Atribuímos aqui um tamanho máximo de largura que essa Class irá exercer */
     margin: 0 auto; /*  dizemos ao navegador que as margens superior e inferior são iguais a 0 e as da esquerda e direita são automáticas */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: flex; /*Tornando os itens flex*/
+    justify-content: center; /* Justificando o conteúdo */
+    align-items: center; /*Estamos centralizando os itens*/
 }
 
 
@@ -245,7 +227,7 @@ form{ /* Aqui chamamos nosso Form para Estilização */
 form h1{ /* Chamamos nosso Texto para estilização */
     text-align: center; /* Alinhamos ao centro */
     font-size: 30px; /* Tamanho da letra */
-    color: black; /* Cor da letra */
+    color: black; /* Cor das letras */
 }
 
 
@@ -275,16 +257,16 @@ form p{ /* Chamamos nosso Paragrafo para estilização */
     border: 0; /* Tamanho da borda */
     border-bottom: 2px solid #ccc; /* estilização da borda inferior */
     padding: 5px; /* Preenchimento do Input */
-    font-size: 17px; /* Tamanho */
+    font-size: 17px; /* Tamanho do texto */
     outline: 0; /*  */
 }
 
 
 form > .input-single > .input:focus ~ label, /*  */
 form .input-single .input:valid ~ label{ /*  */
-    transform: translateY(-25px); /*  */
-    font-size: 12px; /*  */
-    color: black; /*  */
+    transform: translateY(-25px); /*Efeito no texto*/
+    font-size: 12px; /*Tamnho das letras*/
+    color: black; /*Cor das letras*/
 }
 
 
@@ -303,7 +285,7 @@ form input[type=submit]{ /* Aqui estilizamos nosso Botão de enviar*/
     cursor: pointer; /* Torna o botão em algo clicavel  */
 }
 .form-container {
-    opacity: 90%;
+    opacity: 90%; /*Opacidade das letras container form.*/
 }
 /* Fim do nosso container (FORMULÁRIO) */
 
@@ -322,83 +304,66 @@ form input[type=submit]{ /* Aqui estilizamos nosso Botão de enviar*/
 footer {
     padding: min(6vh, 3rem);
     /*  Tamanho */
-    background-color: #F2F0EB;
-    /* Cor de fundo */
-    width: 100%;
-    /* Preencher 100% do tamanho */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: #F2F0EB; /* Cor de fundo */
+    width: 100%;/* Preencher 100% do tamanho */
+    display: flex; /*Deixando os itens lado a lado*/
+    align-items: center; /*deixamos os itens no centro*/
+    justify-content: center; /*  Justificando o conteúdo */
 }
 
 
 
 footer i{
     margin-top: 5px;
-color: #0D0D0D;
-/* Cor do texto */
+color: #0D0D0D;/* Cor do texto */
 }
 
 footer i span{
-    margin-left: 5px;
-/* Espaçamento na esquerda */
-    font-weight: 800;
-    /* Peso da fonte */
+    margin-left: 5px;/* Espaçamento na esquerda */
+    font-weight: 800;  /* Peso da fonte */
 }
 
 
 .container-footer{
-display: flex;
-/* Tornando flex (deixando os itens na vertical) */
-gap: 50px;
-/*  Espaçamento entre os itens */
+display: flex; /* Tornando flex (deixando os itens na vertical) */
+gap: 50px; /*  Espaçamento entre os itens */
 }
 
 .itens-footer1{
-    display: flex;
-    /* Tornando Flex */
+    display: flex;   /* Tornando Flex os itens */
     flex-direction: column;
- justify-content: center;
-    /*  Justificando o conteúdo */
- align-items: center;
-    /* Alinhando item a centro */
- font-size: 1.3rem;
-/* Tamanho do texto */
+    justify-content: center; /*  Justificando o conteúdo */
+    align-items: center;/* Alinhando item a centro */
+    font-size: 1.3rem;/* Tamanho do texto */
 }
 
 
 
 footer ul li{
-    color: #0D0D0D;
-    font-weight: 800;
-    /* Peso da fonte */
-    font-size: 1.2rem;
-    /* Tamanho do texto */
+    color: #0D0D0D; /*Cor das*/
+    font-weight: 800; /* Peso da fonte */
+    font-size: 1.2rem; /* Tamanho do texto 
 }
 
-footer ul li span{
-color: #643DF2;     
+footer ul li span {
+color: #643DF2;    
 }
 
-        footer ul li:hover{
+        footer ul li:hover {
             /* Hover para mudarmos algo ao passar o mouse por cima */
             color: #643DF2; 
             transition: 0.4s;  
         }
 
 
-        footer img{
-    margin-left: 7rem;
-            width: 10rem;
-            height: auto;
-            display: flex;
-            /* Tornando Flex */
-            align-items: center;
-            /* Alinhando item a centro */
-            justify-content: center;
-       /*  Justificando o conteúdo */
-
-                }
+ footer img{
+     margin-left: 7rem; /**/
+     width: 10rem; /**/
+     height: auto; /**/
+    display: flex;  /* Tornando Flex os conteúdos*/
+    align-items: center;  /* Alinhando item a centro */
+     justify-content: center;  /*  Justificando o conteúdo */
+ }
 
 
 
@@ -406,26 +371,26 @@ color: #643DF2;
 
 @media (max-width: 830px) {
 
-
+/* A responsividade do header da página do contato */
     header{
-        padding: 3rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        text-align: center;
-        font-size: 1.5rem;
-        gap: 30px;
-        width: 100%;
+        padding: 3rem; /*Prenchimento*/
+        display: flex; /*Deixamos os items lado a lado*/
+        align-items: center; /*Estamos centralizando os contúdos*/
+        justify-content: space-between; /*Estamos justificando os contúedos*/
+        text-align: center; 
+        font-size: 1.5rem; /*Tamanho das letras*/
+        gap: 30px; /*Espsçamento dos istens*/
+        width: 100%; /*Largura*/
         box-sizing: border-box;
     }
 
     .section-1{
-        padding: 3rem;
-        display: flex;
+        padding: 3rem; /*Tamanho da sessão*/
+        display: flex; /*tornando flex os conteúdos*/
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
-        width: 100%;
+        width: 100%; /*Largura*/
     }
     .div-button{
        display: flex; 
