--- a/cursos.css
+++ b/cursos.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Fonte */
 
+/* Paleta de cores */
 :root{
   --bluew: #91D7F2;
   --cream: #F2F0EB;
@@ -15,8 +16,10 @@
   --green: #55D976;
   --greenb: #027313;
 }
-/* Paleta de cores */
 
+
+
+/* Resetando a página */
 *{
   margin: 0;
   padding: 0;
@@ -25,158 +28,129 @@
   list-style: none;
   text-decoration: none;
 }
-/* Resetando a página */
+
 body{
-   background-color: #0D0D0D;
-/* Cor de fundo da página */
+   background-color: #0D0D0D;/* Cor de fundo da página */
 }
 
-html{
 /* Definições na raiz do html */
-    width: 100%;
-/* Para ocupar 100% da largura */
-    height: 100vh;
-/*  100vh para que a página tenha a mesma altura do navegador */
-overflow-x: hidden;
+html{
+    width: 100%;/* Para ocupar 100% da largura */
+    height: 100vh;/*  100vh para que a página tenha a mesma altura do navegador */
+    overflow-x: hidden;
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
-    padding: min(2vh, 4rem);
-/*  Tamanho do cabeçalho */
-    background-color: #0D0D0D;
-/* Cor de fundo */
-    display: flex;
-/* Tornando Flex */
-    justify-content: space-between;
-/*  Justificando o conteúdo */
-    align-items: center;
-/* Alinhando itens ao centro */
-    text-align: center;
-/* Alinhando os textos ao centro */
-    position: sticky;
-/* Fixando o cabeçalho ao rolar a página */
-top: 0;
-/* Zerando a parte de cima */
-left: 0;
-/* Zerando a esquerda (Que é por onde o elemento aparece) */
-z-index: 999;
-/*  Dando prioridade */
-width: 100%;
-/* Pra ocupar 100% do espaço */
-overflow: hidden; /* */
-box-shadow: 0px 2px 2px rgb(255, 255, 255);
-font-size: 1.3rem;
-}
+    padding: min(2vh, 4rem);/*  Tamanho do cabeçalho */
+    background-color: #0D0D0D;/* Cor de fundo */
+    display: flex;/* Tornando Flex */
+    justify-content: space-between;/*  Justificando o conteúdo */
+    align-items: center;/* Alinhando itens ao centro */
+    text-align: center;/* Alinhando os textos ao centro */
+    position: sticky;/* Fixando o cabeçalho ao rolar a página */
+    top: 0;/* Zerando a parte de cima */
+    left: 0;/* Zerando a esquerda (Que é por onde o elemento aparece) */
+    z-index: 999;/*  Dando prioridade */
+    width: 100%;/* Pra ocupar 100% do espaço */
+    overflow: hidden; /* */
+    box-shadow: 0px 2px 2px rgb(255, 255, 255);
+    font-size: 1.3rem; /*Tamanho das letras*/
+} 
 
 header img{
 /* Estilização da logo */
-    width: 5rem;
-/* Tamanho */
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-/* Alinhando item a centro */
-    justify-content: center;
-    /*  Justificando o conteúdo */
+    width: 5rem;/* Tamanho da largura */
+    display: flex; /* Tornando Flex */
+    align-items: center;/* Alinhando item a centro */
+    justify-content: center; /*  Justificando o conteúdo */
 }
 
 header a{
-    margin-right: 2vh;
-/*  Espaçento na esquerda */
-    color: #F2F2F2;
-/*  Cor do texto */
-    font-weight: 800;
-    /* Peso da fonte */
+    margin-right: 2vh;/*  Espaçento na esquerda */
+    color: #F2F2F2;/* Peso da fonte */
+    font-weight: 800;  /* Peso da fonte */
 
 }
 
 header a:hover{
-    border-bottom: 2.5px solid#643DF2;
-    /* Criando uma borda sólida com cor */
-    transition: 0.1s;
-/* Tempo de transição */
+    border-bottom: 2.5px solid#643DF2; /* Criando uma borda sólida com cor */
+    transition: 0.1s;/* Tempo de transição */
 }
 
 
 header i {
-    font-size: 1.5rem;
-    /* Tamanho */
-    color: #643DF2;
-    /* Cor do texto */
+    font-size: 1.5rem; /*Tamanho das letras*/
+    color: #643DF2; /* Cor do texto */
 }
-
-
-
-
 /* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
+
+
+
 
 /*COMEÇO DA ESTILIZAÇÃO DO NOSSO CONTEÚDO*/
 .imagem-cabecalho img {
-
-    height: 30rem;
-    /*a largura será 30 vezes o tamanho da fonte base (16px)*/
-    width: 100%;
-    /*a largura se ajusta automaticamente a 100% do contâiner pai*/
-    object-fit: cover;
-    /*mantendo a imagem sem distorção*/
-    margin-bottom: 2rem;
+    height: 30rem;  /*a Altura será 30 vezes o tamanho da fonte base (16px)*/
+    width: 100%; /*a largura se ajusta automaticamente a 100% do contâiner pai*/
+    object-fit: cover; /*mantendo a imagem sem distorção*/
+    margin-bottom: 2rem; /*Espaçamento na parte inferior*/
 }
 
-.flex-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
+
 /* Define uma estrutura flexível para alinhar e centralizar elementos horizontal e verticalmente, com espaçamento entre eles */
+.flex-box {
+    display: flex; /*Tornamos os itens flex*/
+    align-items: center; /*Alinhamento*/
+    justify-content: center; /*Justificamos os conteúdos*/
+    gap: 50px; /**Espaçamento entre eles/
+}
 
 /* Estilo para o título principal na seção 1 */
-.sessão-1 h1 {
-    font-size: 1.7rem;
-    text-align: center;
-    color: #F2F0EB;
-    margin-bottom: 2rem;
-}
 /* Ajusta o tamanho da fonte, alinha o texto ao centro, define a cor e adiciona um espaçamento inferior */
+.sessão-1 h1 {
+    font-size: 1.7rem; /*Tamanho das letras*/
+    text-align: center;/*Alinhamento*/
+    color: #F2F0EB;/*Cor das letras*/
+    margin-bottom: 2rem; /*Espaçamento na parte inferior*/
+}
 
 /* Subtítulo da seção 1 */
 .sessão-1 h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #bd00ff;
-    font-weight: 600;
-    font-size: 4rem;
-    margin-bottom: 1rem;
+    display: flex; /*Tornando flex*/
+    justify-content: center; /*Estamos justificando os conteúdos pare o centros*/
+    align-items: center; /*Alinhamento dos itens*/
+    color: #bd00ff; /*Cor das letras*/
+    font-weight: 600; /*Peso da fonte*/
+    font-size: 4rem; /*Tamanho das letras*/
+    margin-bottom: 1rem; /*Espaçamento na parte inferior*/
 }
 /* Centraliza o subtítulo, aplica cor, peso na fonte, tamanho grande e margem inferior */
 
 /* Configurações gerais do container na seção 1 */
-.container-section1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #F2F2F2;
-    gap: 80px;
-    margin-bottom: 30px;
-}
 /* Define layout flexível para centralizar e espaçar os elementos, com cor e espaçamento inferior */
+.container-section1 {
+    display: flex; /*Tornando flex*/
+    align-items: center; /*Alinhamento dos itens*/
+    justify-content: center; /*Justicamos os conteúdos ao centro*/
+    color: #F2F2F2; /*Cor dos container*/
+    gap: 80px; /*Espaçamento entre eles*/
+    margin-bottom: 30px; /*Espaçamento na parte inferior*/
+}
 
 /* Texto dentro do container da seção 1 */
-.container-section1 p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 /* Centraliza o texto em um layout flexível */
+.container-section1 p {
+    display: flex; /*Tornando flex */
+    align-items: center; /*Alinhamento dos itens*/
+    justify-content: center; /*Estamos justificando os conteúdos*/
+}
 
 /* Estilização de parágrafos destacados */
 .p1 {
-    font-size: 3rem;
-    color: #bd00ff;
-    font-weight: 600;
+    font-size: 3rem; /*Tamanho dos textos*/
+    color: #bd00ff; /*Cor das letras*/
+    font-weight: 600; /*Peso da fonte*/
 }
 /* Aplica destaque no tamanho, cor e peso da fonte */
 
@@ -185,51 +159,51 @@ header i {
     font-size: 1.5rem;
 }
 /* Define fonte menor para conteúdos adicionais */
-
 /* Estilo geral para a seção 2 */
-.sessão-2 {
-    padding: min(15vh, 10rem);
-    background-color: #987cff;
-    color: #2F3240;
-}
 /* Aplica espaçamento proporcional, cor de fundo e cor do texto */
-
-/* Título principal da seção 2 */
-.sessão-2 h3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4rem;
-    color: #2F3240;
-    margin-bottom: 3rem;
+.sessão-2 {
+    padding: min(15vh, 10rem); /*Prechimento da sessão*/
+    background-color: #987cff; /*Cor de fundo dessa sessão*/
+    color: #2F3240; /*Cor dos textos*/
 }
+
+
+
 /* Centraliza o título, define cor, tamanho grande e adiciona margem inferior */
+.sessão-2 h3 {
+    display: flex; /* tornando flex*/
+    align-items: center; /*Alinhamento dos itens para o centro*/
+    justify-content: center; /*Estamos justificando os conteúdos para o centro*/
+    font-size: 4rem; /*Tamanhp das letras*/
+    color: #2F3240; /*Cor do texto*/
+    margin-bottom: 3rem; /*Espaçamento na parte inferior*/
+
 
 /* Container centralizado para elementos da seção 2 */
 .container-section2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex; /*Tornando flex*/
+    align-items: center; /*Alinhamento dos itens para o centro*/
+    justify-content: center; /*Justificamos os conteúdos*/
 }
-/* Estrutura flexível para centralização */
+
 
 /* Estilo de parágrafos na seção 2 */
 .p2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 3rem;
-    color: #2b04bb;
+    display: flex; /*Tornando flex os conteúdos*/
+    align-items: center; /*Alinhamento dos conteúdos para o centro*/
+    justify-content: center; /*estamos Justificando os conteúdos para o centro*/
+    text-align: center; /*Alinhamento dos textos para o centro*/
+    font-size: 3rem; /*Tamanho das letras*/
+    color: #2b04bb; /*Cor das letras*;
 }
 /* Centraliza, aplica cor e tamanho grande aos textos destacados */
 
 /* Estilo para parágrafos menores */
 .p2-2 {
-    font-size: 1.3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 1.3rem; /*Tamamho das letras*/
+    display: flex; /*Tornando felx*/
+    justify-content: center; /*estamos Justificando os conteúdos para o centro*/
+    align-items: center; /*Alinhamento dos conteúdos para o centro*/
 }
 /* Texto menor, alinhado e centralizado */
 
@@ -242,192 +216,166 @@ header i {
 
 /* Título da seção 3 */
 .sessão-3 h4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4rem;
-    color: #2b04bb;
-    margin-bottom: 3rem;
+    display: flex;/*Tornando flex os conteúdos*/
+    align-items: center;/*Alinhando os conteúdos para o centro*/
+    justify-content: center;/* Aqui estamos Justificando os conteúdos para o centro*/
+    font-size: 4rem; /*Tamanho das letras*/
+    color: #2b04bb; /*Cor das letras*/
+    margin-bottom: 3rem; /*Espaçamento na parte inferior*/
 }
 /* Centraliza, destaca com cor azul e tamanho grande, e adiciona espaçamento inferior */
 
 /* Layout do container da seção 3 */
 .container-section3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex; /*Tornando flex os conteúdos*/
+    align-items: center;/*Alinhando os conteúdos para o centro*/
+    justify-content: center;/* Aqui estamos Justificando os conteúdos para o centro*/
 }
 /* Estrutura flexível para centralizar elementos */
 
 /* Parágrafos destacados na seção 3 */
 .p3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 3rem;
-    color: #2b04bb;
+    display: flex;  /*Tornando flex os conteúdos*/
+    align-items: center; /*Alinhando os conteúdos para o centro*/
+    justify-content: center;/*Justificando os conteúdos para o centro*/
+    text-align: center;/*Alinhando os texto para o centro*/
+    font-size: 3rem; /*Tamanho do texto*/
+    color: #2b04bb;/*Cor dos textos*/
 }
 /* Centraliza, aplica cor azul e destaca com tamanho maior */
 
 /* Parágrafos menores */
 .p3-3 {
-    font-size: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #F2F0EB;
+    font-size: 1rem; /*Tamanho do texto*/
+    display: flex; /*Tornando flex os conteúdos*/
+    justify-content: center; /*Justificando os conteúdos para o centro*/
+    align-items: center; /*Alinhando os conteúdos para o centro*/
+    color: #F2F0EB; /*Cro das letras*/
 }
 /* Aplica fonte menor com cor clara e centraliza os textos */
 
 /* Estilo para a seção 4 */
 .sessão-4 {
-    padding: min(25vh, 20rem);
-    background-color: #0D0D0D;
-    display: flex;
+    padding: min(25vh, 20rem); /*Tamanho da nossa sessão*/
+    background-color: #0D0D0D; /*Cor de fundo da nossa sessão*/
+    display: flex; /*Tornando flex*/
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    align-items: center; /*Alinhamento dos conteúdos*/
+    justify-content: center; /*Justificando os conteúdos*/
 }
 /* Aplica fundo escuro, espaçamento interno grande, layout flexível e quebra de linha quando necessário */
 
+
+
 /* Estilo para imagens na seção 4 */
 .sessão-4 img {
-    width: 33rem;
-    margin-bottom: 10px;
+    width: 33rem; /*Largura da nossa imagem*/
+    margin-bottom: 10px; /*Espaçamento na parte inferior*/
 }
 /* Define largura fixa para as imagens e adiciona margem inferior */
 
+
+
 /* Título da seção 4 */
 .sessão-4 h5 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #F2F2F2;
-    font-size: 3rem;
-    margin-bottom: 10px;
+    display: flex; /*Tornando flex*/
+    align-items: center; /*Alinhando os texto para o centro*/
+    justify-content: center; /*Justificando os conteúdos para o centro/
+    color: #F2F2F2; /*Cor do texto*/
+    font-size: 3rem; /*Tamanho das letras*/
+    margin-bottom: 10px; /*Espaçamento na parte inferior*/
 }
-/* Centraliza o título com cor clara, tamanho grande e espaçamento inferior */
 
+/* Centraliza o título com cor clara, tamanho grande e espaçamento inferior */
         .sessão-4 a button{
-            padding: 8px;
-            /*  Folga dentro do botão */
-            text-align: center;
-            /* Alinhando texto ao centro */
-            width: 200px;
-            /* Largura do botão */
-            border-radius: 40px;
-            /* Arredondamento do botão */
+            padding: 8px; /*  Folga dentro do botão */
+            text-align: center;/* Alinhando texto ao centro */
+            width: 200px; /* Largura do botão */
+            border-radius: 40px;  /* Arredondamento do botão */
             background-color: #643DF2;
             /* Cor de fundo do botão */
-            color: #F2F0EB;
-            /* Cor do texto */
-            border: 2px solid #987cff;
-            /* Criando uma borda sólida com cor */
-            cursor: pointer;
-            /* Mudando o cursor */
-            font-weight: 600;
-            /* Peso da fonte */
+            color: #F2F0EB; /* Cor do texto */
+            border: 2px solid #987cff; /* Criando uma borda sólida com cor */
+            cursor: pointer;/* Mudando o cursor */
+            font-weight: 600;  /* Peso da fonte */
         }
 
  .sessão-4 button:hover {
             /* Hover para mudarmos algo ao passar o mouse por cima */
-            background-color: #987cff;
-            /* Cor do texto */
-            transition: 0.5s;
-            /*  Tempo de transição */
-            color: #0D0D0D;
-            /* Cor do texto */
+            background-color: #987cff;/* Cor do texto */
+            transition: 0.5s;  /*  Tempo de transição */
+            color: #0D0D0D; /* Cor do texto */
         }
         
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
 footer {
-    padding: min(6vh, 3rem);
-    /*  Tamanho */
-    background-color: #F2F0EB;
-    /* Cor de fundo */
-    width: 100%;
-    /* Preencher 100% do tamanho */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: min(6vh, 3rem);   /* Tamanho da sessão */
+    background-color: #F2F0EB; /* Cor de fundo */
+    width: 100%;   /* Preencher 100% do tamanho */
+    display: flex; /*Tornando flex os conteúdos*/
+    align-items: center; /*Alinhar os itens paara o centro*/
+    justify-content: center; /*Estamos justificando os conteúdos*/
 }
 
 
 
 footer i {
-    margin-top: 5px;
-    color: #0D0D0D;
-    /* Cor do texto */
+    margin-top: 5px; /*Espaçamento na parte inferior */
+    color: #0D0D0D; /* Cor de texto */
 }
 
 footer i span {
-    margin-left: 5px;
-    /* Espaçamento na esquerda */
-    font-weight: 800;
-    /* Peso da fonte */
+    margin-left: 5px;  /* Espaçamento na esquerda */
+    font-weight: 800;  /* Peso da fonte */
 }
 
 
 .container-footer {
-    display: flex;
-    /* Tornando flex (deixando os itens na vertical) */
-    gap: 50px;
-    /*  Espaçamento entre os itens */
+    display: flex;  /* Tornando flex (deixando os itens na vertical) */
+    gap: 50px; /*  Espaçamento entre os itens */
 }
 
 .itens-footer1 {
-    display: flex;
-    /* Tornando Flex */
+    display: flex;  /* Tornando Flex */
     flex-direction: column;
-    justify-content: center;
-    /*  Justificando o conteúdo */
-    align-items: center;
-    /* Alinhando item a centro */
-    font-size: 1.3rem;
-    /* Tamanho do texto */
+    justify-content: center;  /*  Justificando o conteúdo */
+    align-items: center; /* Alinhando item a centro */
+    font-size: 1.3rem; /* Tamanho do texto */
 }
 
 
 
 footer ul li {
-    color: #0D0D0D;
-    font-weight: 800;
-    /* Peso da fonte */
-    font-size: 1.2rem;
-    /* Tamanho do texto */
+    color: #0D0D0D; /*Cor das letras*/
+    font-weight: 800;  /* Peso da fonte */
+    font-size: 1.2rem;  /* Tamanho do texto */
 }
 
+
+/* Dando cor a um texto específico nesse span*/
 footer ul li span {
-    color: #643DF2;
+    color: #643DF2; /*Cor das letras*/
 }
-/* Dando cor a um texto específico */
+
 
 footer ul li:hover {
-    /* Hover para mudarmos algo ao passar o mouse por cima */
-    color: #643DF2;
-    transition: 0.4s;
-/* Tempo de transição */
+    color: #643DF2; /*Cor das letras*/
+    transition: 0.4s;/* Tempo de transição */
+
 }
 
 
+/* Aqui estamos estilizando a nossa imagem */
 footer img {
-    margin-left: 7rem;
-    width: 10rem;
-    height: auto;
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-    /* Alinhando item a centro */
-    justify-content: center;
-    /*  Justificando o conteúdo */
+    margin-left: 7rem; /*Espaçamento na parte esquerda*/
+    width: 10rem; /*Largura da imagem*/
+    height: auto; /*Altura automaticamente*/
+    display: flex; /* Tornando Flex */
+    align-items: center; /* Alinhando item a centro */
+    justify-content: center; /*  Justificando o conteúdo */
 
 }
-
-
-
-
 /* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
 
 
