--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Fonte */
 
+/* Paleta de cores */
 :root{
   --bluew: #91D7F2;
   --cream: #F2F0EB;
@@ -15,8 +16,8 @@
   --green: #55D976;
   --greenb: #027313;
 }
-/* Paleta de cores */
 
+/* Resetando a página */
 *{
   margin: 0;
   padding: 0;
@@ -25,147 +26,106 @@
   list-style: none;
   text-decoration: none;
 }
-/* Resetando a página */
-body{
-   background-color: #0D0D0D;
+
 /* Cor de fundo da página */
+body{
+   background-color: #0D0D0D; 
 }
 
-html{
+
 /* Definições na raiz do html */
-    width: 100%;
-/* Para ocupar 100% da largura */
-    height: 100vh;
-/*  100vh para que a página tenha a mesma altura do navegador */
+html{
+    width: 100%; /* Para ocupar 100% da largura */
+    height: 100vh; /*  100vh para que a página tenha a mesma altura do navegador */
 overflow-x: hidden;
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
-    padding: min(2vh, 4rem);
-/*  Tamanho do cabeçalho */
-    background-color: #0D0D0D;
-/* Cor de fundo */
-    display: flex;
-/* Tornando Flex */
-    justify-content: space-between;
-/*  Justificando o conteúdo */
-    align-items: center;
-/* Alinhando itens ao centro */
-    text-align: center;
-/* Alinhando os textos ao centro */
-    position: sticky;
-/* Fixando o cabeçalho ao rolar a página */
-top: 0;
-/* Zerando a parte de cima */
-left: 0;
-/* Zerando a esquerda (Que é por onde o elemento aparece) */
-z-index: 999;
-/*  Dando prioridade */
-width: 100%;
-/* Pra ocupar 100% do espaço */
-overflow: hidden; /* */
-box-shadow: 0px 2px 2px rgb(255, 255, 255);
-font-size: 1.3rem;
+    padding: min(2vh, 4rem); /*  Tamanho do cabeçalho */
+    background-color: #0D0D0D; /* Cor de fundo */
+    display: flex; /* Tornando Flex */
+    justify-content: space-between; /*  Justificando o conteúdo */
+    align-items: center; /* Alinhando itens ao centro */
+    text-align: center; /* Alinhando os textos ao centro */
+    position: sticky; /* Fixando o cabeçalho ao rolar a página */
+    top: 0; /* Zerando a parte de cima */
+    left: 0; /* Zerando a esquerda (Que é por onde o elemento aparece) */
+    z-index: 999; /*  Dando prioridade */
+    width: 100%; /* Pra ocupar 100% do espaço */  
+    overflow: hidden; /* */
+    box-shadow: 0px 2px 2px rgb(255, 255, 255);
+     font-size: 1.3rem;
 }
 
-header img{
 /* Estilização da logo */
-    width: 5rem;
-/* Tamanho */
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-/* Alinhando item a centro */
-    justify-content: center;
-    /*  Justificando o conteúdo */
+header img{
+    width: 5rem; /* Tamanho */
+    display: flex;  /* Tornando Flex */
+    align-items: center; /* Alinhando item a centro */
+    justify-content: center; /*  Justificando o conteúdo */
 }
 
 header a{
-    margin-right: 2vh;
-/*  Espaçento na esquerda */
-    color: #F2F2F2;
-/*  Cor do texto */
-    font-weight: 800;
-    /* Peso da fonte */
+    margin-right: 2vh; /*  Espaçento na esquerda */
+    color: #F2F2F2; /*  Cor do texto */
+    font-weight: 800;    /* Peso da fonte */
 
 }
 
+/* Aqui estamos colocando o efeito no header da página */
 header a:hover{
-    border-bottom: 2.5px solid#643DF2;
-    /* Criando uma borda sólida com cor */
-    transition: 0.1s;
-/* Tempo de transição */
+    border-bottom: 2.5px solid#643DF2;  /* Criando uma borda sólida com cor */
+    transition: 0.1s; /* Tempo de transição */
 }
 
 
 header i {
-    font-size: 1.5rem;
-    /* Tamanho */
-    color: #643DF2;
-    /* Cor do texto */
+    font-size: 1.5rem;  /* Tamanho das letras */
+    color: #643DF2;  /* Cor do texto */
 }
-
-
-
 /* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
-/*  ESTILIZAÇÃO DA PRIMEIRA SESSÃO*/
 
+
+
+/*  ESTILIZAÇÃO DA PRIMEIRA SESSÃO*/
 .section-1 {
-    padding: min(5vh, 5rem);
-    /* Tamanho */
-    background-color: #0D0D0D;
-    /* Cor de fundo */
-    width: 100%;
-    /* Preencher 100% do tamanho */
+    padding: min(5vh, 5rem);  /* Tamanho da nossa sessão*/
+    background-color: #0D0D0D;    /* Cor de fundo */
+    width: 100%;  /* Preencher 100% do tamanho */
 }
 
 .container-carrossel {
-    overflow: hidden;
-    /*Esconde partes das imagens que saem do container*/
-    width: 100%;
-    /*O container ocupa toda a largura da página*/
-    max-width: 80vw;
-    /* O container ocupa no máximo 80% da largura da viewport */
-    margin: auto;
-    /*Centraliza o container*/
-    border: 3px solid #643DF2;
-    /* Criando uma borda sólida com cor */
-    border-radius: 20px;
-    /*  Arredondamento do carrossel  */
+    overflow: hidden;   /*Esconde partes das imagens que saem do container*/
+    width: 100%; /*O container ocupa toda a largura da página*/
+    max-width: 80vw;   /* O container ocupa no máximo 80% da largura da viewport */
+    margin: auto; /*Centraliza o container*/
+    border: 3px solid #643DF2;/* Criando uma borda sólida com cor */
+    border-radius: 20px; /*  Arredondamento do carrossel  */
 }
 
 /*Estilo da faixa de imagens*/
 .itens-carrossel {
-    display: flex;
-    /*Coloca as imagens lado a lado em linha*/
-    transition: transform 0.5s ease;
-    /*Animação suave para a transição*/
+    display: flex;  /*Coloca as imagens lado a lado em linha*/
+    transition: transform 0.5s ease;  /*Animação suave para a transição*/
 }
 
 /*Cada item do carrossel*/
 .carrossel-item {
-    flex: 0 0 100%;
-    /* Cada item ocupa 100% da largura do container*/
+    flex: 0 0 100%;  /* Cada item ocupa 100% da largura do container*/
 }
 
 /* Estilização das imagens */
 img {
-    width: 100%;
-    /*As imagens ocupam toda a largura do item*/
-    display: block;
-    /*Garante que não haja espaçamento abaixo das imagens*/
+    width: 100%;  /*As imagens ocupam toda a largura do item*/
+    display: block;   /*Garante que não haja espaçamento abaixo das imagens*/
 }
 
 #imagem3 {
     scroll-behavior: smooth;
 
 }
-
-
-
-
 /*  FIM DA PRIMEIRA SESSÃO */
 
 
@@ -173,81 +133,57 @@ img {
 
 /* ESTILIZAÇÃO DA SEGUNDA SESSÃO */
 .section2 {
-    background-color: #0D0D0D;
-    /* Cor de fundo */
-    padding: min(35vh, 30rem);
-    /* Tamanho */
-    width: 100%;
-    /* Preencher 100% do tamanho*/
-    color: white;
-    /* Cor do texto */
+    background-color: #0D0D0D;   /* Cor de fundo */
+    padding: min(35vh, 30rem);    /* Tamanho da sessão*/
+    width: 100%;  /* Preencher 100% do tamanho*/
+    color: white;   /* Cor do texto */
 }
 
 /* Caixa pai da sessão */
 .container-section2 {
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-    /* Alinhando item a centro */
-    gap: 100px;
-    /* Espaçamento entre os itens */
+    display: flex;  /* Tornando Flex */
+    align-items: center;  /* Alinhando item a centro */
+    gap: 100px; /* Espaçamento entre os itens */
 }
 
 
 
 .h1-button h1 {
-    font-size: 6rem;
-    /* Tamanho do texto */
-    margin-bottom: 30px;
-    /*  Espaçamento na parte de baixo */
+    font-size: 6rem;  /* Tamanho do texto */
+    margin-bottom: 30px;  /*  Espaçamento na parte de baixo */
     text-align: center;
-    display: flex;
+    display: flex; /*Tornando flex os conteúdos*/
 }
 
 .h1-button p {
-    font-size: 3rem;
-    /* Tamanho do texto */
-    margin-bottom: 30px;
-    /*  Espaçamento na parte de baixo */
+    font-size: 3rem;  /* Tamanho do texto */
+    margin-bottom: 30px; /*  Espaçamento na parte de baixo */
 }
 
 .h1-button p span {
-    color: #987cff;
-    /* Cor do texto */
-    font-weight: 600;
-    /* Peso da fonte */
+    color: #987cff; /* Cor do texto */
+    font-weight: 600;  /* Peso da fonte */
 }
 
 
 .h1-button a button {
-    padding: 8px;
-    /*  Folga dentro do botão */
-    text-align: center;
-    /* Alinhando texto ao centro */
-    width: 200px;
-    /* Largura do botão */
-    border-radius: 40px;
-    /* Arredondamento do botão */
-    background-color: #643DF2;
-    /* Cor de fundo do botão */
-    color: #F2F0EB;
-    /* Cor do texto */
-    border: 2px solid #987cff;
-    /* Criando uma borda sólida com cor */
-    cursor: pointer;
-    /* Mudando o cursor */
-    font-weight: 600;
-    /* Peso da fonte */
+    padding: 8px; /*  Folga dentro do botão */
+    text-align: center; /* Alinhando texto ao centro */
+    width: 200px;/* Largura do botão */
+    border-radius: 40px;  /* Arredondamento do botão */
+    background-color: #643DF2; /* Cor de fundo do botão */
+    color: #F2F0EB; /* Cor do texto */
+    border: 2px solid #987cff; /* Criando uma borda sólida com cor */
+    cursor: pointer; /* Mudando o cursor */
+    font-weight: 600; /* Peso da fonte */
 }
 
-.h1-button a button:hover {
+
     /* Hover para mudarmos algo ao passar o mouse por cima */
-    background-color: #987cff;
-    /* Cor do texto */
-    transition: 0.5s;
-    /*  Tempo de transição */
-    color: #0D0D0D;
-    /* Cor do texto */
+.h1-button a button:hover {
+    background-color: #987cff;  /* Cor do texto */
+    transition: 0.5s; /*  Tempo de transição */
+    color: #0D0D0D;  /* Cor do texto */
 }
 
 /* Estilização da imagem */
